# pubmed-citation-explorer

./: .gitignore  Makefile  README.md  application.py  pyproject.toml  requirements.txt  setup.py
.ebextensions/: myapp.config
.github/workflows/: python-app.yml
flask_app/: web.py
flask_app/templates/: index.html
src/: download.py  ftp_to_s3.py  main.py  preprocess.py  upload.py  utils.py
templates/: index.html
tests/: test_app.py
