[tool.poetry]
name = "pubmed"
version = "0.1.0"
description = "msds data engineering capstone project spring 2021: pubmed"
authors = ["Yanping Liu"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel="^5.5"
pyarrow="^3.0"
openpyxl="^3.0"
scikit-learn = "^0.24"
pandas = "^1.2.4"
numpy = "^1.20.2"
pylint = "^2.8.2"
nltk = "^3.6.2"
wordcloud = "^1.8.1"
Flask = "^1.1.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pylint-flask = "^0.6"
boto3 = "^1.17.84"
psycopg2 = "^2.8.6"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
